# neural_networks

./: .gitignore  pyproject.toml
neural_networks/components/: attention.py  layer_normalization.py  linear.py  mlp.py  mlp_cuda.cu  mlp_cuda.py  network.py  positional_encoding.py
neural_networks/mlp/hand_drawn_number_detection/: .gitignore  class_network.py  network_pytorch.py
neural_networks/transformers/decoder_only/: attention_test.py  gpt.py
neural_networks/transformers/decoder_only_chatbot/: .gitignore  gpt.py  transformer.py
