[tool.poetry]
name = "neural-networks"
version = "0.1.0"
description = ""
authors = ["Roni Tarvainen <roni.tarvainen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.0"
numba = "^0.60.0"
pgi = "^0.0.11.2"
scipy = "^1.14.1"
keyboard = "^0.13.5"
matplotlib = "^3.9.2"
nltk = "^3.9.1"
tensorflow = "^2.18.0"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
